k8s/overlays/dev/ingress/realestate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realestate-ingress
  annotations:
    # no http -> https needed in dev
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    # No host => works for http://localhost/ in local cluster setups (k3d/k3s)
    - http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realestate-frontend-svc
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: realestate-api-svc
                port:
                  number: 5000
